--- a/myApp/views/home.ejs
+++ b/myApp/views/home.ejs
@@ -66,7 +66,7 @@
                     aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 <% if(error){ %>
-                    <p><%= error%></p>
+                    <h1><%= error%></h1>
                  <% } %>
             </form>
         </div>
